Сделано отображение вопросов и ответов к экзамену, добавлен use case генерации теста

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
 
     <string name="examList_questionNumber">Вопрос #%s</string>
     <string name="questionDetails_answerFalseText">%d. %s</string>
+    <string name="examTest_positionFromCommon">%s из %s</string>
 </resources>
