--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="examList_questionNumber">Вопрос #%s</string>
     <string name="questionDetails_answerFalseText">%d. %s</string>
     <string name="examTest_positionFromCommon">%s из %s</string>
+    <string name="common_сontinue">Продолжить</string>
 </resources>
