--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
 
     <string name="main_infoDialogTypeExamTitle">Формат тестирования</string>
     <string name="main_infoDialogTypeExamContent">В режиме тренировка вы будете видеть ответы сразу.\nЭто поможет вам ознакомиться с тестом. Экзамен проверит ваши знания. Показ ответов будет отключен на время тестирования.</string>
+    <string name="main_tabFirst">Число</string>
+    <string name="main_tabSecond">Диапазон</string>
 
     <string name="examList_questionNumber">Вопрос #%s</string>
     <string name="questionDetails_answerFalseText">%d. %s</string>
