--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">gosexam</string>
+    <string name="app_name">GosExam</string>
 
     <string name="common_сontinue">Продолжить</string>
     <string name="common_next">Далее</string>
