--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="examResult_failTest">Вы не справились с тестом</string>
     <string name="common_emptyError">Поле не может быть пустым или равняться нулю</string>
     <string name="common_errorLarge">Превышено максимальное значение 1049</string>
+
+    <string name="main_tvInfoText">В зависимости от введеного числа будет сгенерирован тест со случайными вопросами в разном порядке (с документа для подготовки к ГИА) \n\nМаксимальное количество вопроcов: %s</string>
 </resources>
