--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,7 @@
 
     <string name="error_facultySelection">Необходимо выбрать хотя бы один факультет</string>
 
+    <string name="examTest_lastTime">Осталось: %s</string>
+
     <string name="main_tvInfoText">В зависимости от введеного числа будет сгенерирован тест со случайными вопросами в разном порядке (с документа для подготовки к ГИА) \n\nМаксимальное количество вопроcов: %s</string>
 </resources>
