--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
 
     <string name="infoDialog_close">Закрыть</string>
 
+    <string name="main_btnExamStart">Включить режим экзамена</string>
+    <string name="main_btnExamEnd">Выключить режим экзамена</string>
+
     <string name="main_infoDialogTypeExamTitle">Формат тестирования</string>
     <string name="main_infoDialogTypeExamContent">В режиме тренировка вы будете видеть ответы сразу.\nЭто поможет вам ознакомиться с тестом. Экзамен проверит ваши знания. Показ ответов будет отключен на время тестирования.</string>
     <string name="main_tabFirst">Число</string>
@@ -29,6 +32,8 @@
     <string name="error_facultySelection">Необходимо выбрать хотя бы один факультет</string>
 
     <string name="examTest_lastTime">Осталось: %s</string>
+
+    <string name="examTest_spentTime">Время прохождения теста %s минут</string>
 
     <string name="main_tvInfoText">В зависимости от введеного числа будет сгенерирован тест со случайными вопросами в разном порядке (с документа для подготовки к ГИА) \n\nМаксимальное количество вопроcов: %s</string>
 </resources>
